# evlearn_languages

./: .gitignore  requirements.txt
00_concetti-e-info/: 000_approccio.md  (+6 more)
text2decks_pipeline/src/py/nlp_deck_manager_project/: README.md  pyproject.toml
text2decks_pipeline/src/py/nlp_deck_manager_project/docs/: architecture.md
text2decks_pipeline/src/py/nlp_deck_manager_project/examples/: intentional_duplicates_de.csv  sample_context_it_work_de.txt  sample_de.srt
text2decks_pipeline/src/py/nlp_deck_manager_project/nlp_deck_manager/: __init__.py  cli.py  logging_utils.py  models.py
text2decks_pipeline/src/py/nlp_deck_manager_project/nlp_deck_manager/core/: __init__.py  builder.py  exports.py
text2decks_pipeline/src/py/nlp_deck_manager_project/nlp_deck_manager/deck_management/: __init__.py  builder.py
text2decks_pipeline/src/py/nlp_deck_manager_project/nlp_deck_manager/exporters/: __init__.py  apkg_exporter.py  csv_exporter.py
text2decks_pipeline/src/py/nlp_deck_manager_project/nlp_deck_manager/nlp/: __init__.py  analyzer.py
text2decks_pipeline/src/py/nlp_deck_manager_project/nlp_deck_manager/notes/: __init__.py  factory.py
text2decks_pipeline/src/py/nlp_deck_manager_project/nlp_deck_manager/processors/: __init__.py  base.py  cached_info.py  custom_loader.py  german.py  japanese.py  translation_vanilla.py
text2decks_pipeline/src/py/nlp_deck_manager_project/processors_custom/: cached_api_processor_example.py  custom_processor_example.py
text2decks_pipeline/src/py/nlp_deck_manager_project/tests/: test_core.py  test_readers.py  test_reference_db_info.py
(+70 files in other folders)
